--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -28,12 +28,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{comment.email}"
-            android:textSize="18sp" />
+            android:textColor="#03A9F4"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{comment.body}" />
+            android:text="@{comment.body}"
+            android:textSize="18sp" />
     </LinearLayout>
 </layout>
