--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewHolder"
-            type="com.overeasy.homework.MainAdapter.ViewHolder" />
+            type="com.overeasy.homework.DetailAdapter.ViewHolder" />
         <variable
             name="comment"
             type="com.overeasy.homework.pojo.Comment" />
