--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:onClick="@{() -> viewHolder.onClick(post)}" >
+        android:onClick="@{() -> viewHolder.onClick(post)}"
+        android:onLongClick="@{(view) -> viewHolder.onLongClick(view)}">
 
         <TextView
             android:id="@+id/textView"
